// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render a large portal 1`] = `
.c0 {
  background-color: #1C2125;
  width: 42.8125rem;
  max-width: calc(100% - 2.5rem);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: relative;
  padding: 3rem 1.375rem 1.5rem;
  border-radius: 0.375rem;
  border: 1px solid #404040;
  box-shadow: 0.625rem 0.625rem 1.25rem rgba(10,10,10,1);
  height: calc(100% - 2.5rem);
  max-height: 33.125rem;
}

.c1 {
  cursor: pointer;
  position: absolute;
  line-height: 1.375rem;
  top: 0;
  left: 0;
  padding: 0.75rem 1.375rem;
  font-weight: 400;
  color: #B4B4B4;
}

.c2 {
  font-size: 0.625rem;
  padding: 0.75rem 0.875rem;
  left: unset;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    ✕
  </div>
  portal
</div>
`;

exports[`Switch should render a small portal  1`] = `
.c0 {
  background-color: #1C2125;
  width: 28.125rem;
  max-width: calc(100% - 2.5rem);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: absolute;
  top: 5.625rem;
  padding: 3rem 1.375rem 1.5rem;
  border-radius: 0.375rem;
  border: 1px solid #404040;
  box-shadow: 0.625rem 0.625rem 1.25rem rgba(10,10,10,1);
  height: calc(100% - 2.5rem);
  max-height: 19.0625rem;
}

.c1 {
  cursor: pointer;
  position: absolute;
  line-height: 1.375rem;
  top: 0;
  left: 0;
  padding: 0.75rem 1.375rem;
  font-weight: 400;
  color: #B4B4B4;
}

.c2 {
  font-size: 0.625rem;
  padding: 0.75rem 0.875rem;
  left: unset;
  right: 0;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    ✕
  </div>
  portal
</div>
`;
